Fixed the forms function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <label id="choose-a-die-option-label">
                 Choose an option
                 <select id="choose-a-die-option">
-                    <option value="close-forms">Choose an option</option>
+                    <option value="">Choose an option</option>
                     <option value="base-die-form">Simple Die Roll</option>
                     <option value="modifed-die-form">Modifed Die Roll</option>
                     <option value="advantage-die-form">Advantage</option>
