Added functionality to some forms

--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
                     modifer for modifed die
                     <input class="die-input" type="number" id="modifer-modifed-die" value="0">
                 </label>
-                <button class="submit-button" value="submit" id="modifed-die-submit-button">Roll!</button>
+                <button class="submit-button" type="button" value="submit" id="modifed-die-submit-button">Roll!</button>
                 <p id="modifed-die-results">Results</p>
             </form>
             <form class="die-form" id="advantage-die-form">
                 <label class="die-input-label" id="number-of-advantage-die-sides-label">
-                    number of advatange die sides
+                    number of advantage die sides
                     <input class="die-input" type="number" id="number-of-advantage-die-sides" value="20">
                 </label>
                 <label class="die-input-label" id="modifer-advantage-die-label">
                     modifer of advantage die
                     <input class="die-input" type="number" id="modifer-advantage-die" value="0">
                 </label>
-                <button class="submit-button" value="submit" id="advantage-die-submit-button">Roll!</button>
+                <button class="submit-button" type="button" value="submit" id="advantage-die-submit-button">Roll!</button>
                 <p id="advantage-die-results">Results</p>
             </form>
             <form class="die-form" id="disadvantage-die-form">
