--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <label id="choose-a-die-option-label">
                 Choose an option
                 <select id="choose-a-die-option">
-                    <option value="">Choose an option</option>
+                    <option value="">Choose a roll type</option>
                     <option value="base-die-form">Simple Die Roll</option>
-                    <option value="modifed-die-form">Modifed Die Roll</option>
+                    <option value="modifed-die-form">Modified Die Roll</option>
                     <option value="advantage-die-form">Advantage</option>
                     <option value="disadvantage-die-form">Disadvantage</option>
                     <option value="high-roll-form">High Roll</option>
@@ -25,11 +25,11 @@
             </label>
             <form class="die-form" id="base-die-form">
                 <label class="die-input-label" id="number-of-sides-base-die-roll-label">
-                    number of sides for base die
+                    Die Sides
                     <input class="die-input" type="number" id="number-of-sides-base-die-roll" value="20">
-                </label>
+                </label> <br>
                 <label class="die-input-label" id="number-of-base-die-label">
-                    number of base die
+                    Die Number
                     <input class="die-input" type="number" id="number-of-base-die" value="1">
                 </label>
                 <button class="submit-button" type="button" value="submit" id="base-die-submit-button">Roll!</button>
@@ -37,15 +37,15 @@
             </form>
             <form class="die-form" id="modifed-die-form">
                 <label class="die-input-label" id="number-of-sides-modifed-die-roll-label">
-                    number of sides for modifed die
+                    Die Sides
                     <input class="die-input" type="number" id="number-of-sides-modifed-die-roll" value="20">
-                </label class="die-input-label" id="number-of-modifed-die-label">
-                <label>
-                    number of die for modifed die
+                </label><br>
+                <label class="die-input-label" id="number-of-modifed-die-label">
+                    Die Number
                     <input class="die-input" type="number" id="number-of-modifed-die" value="1">
-                </label>
+                </label><br>
                 <label class="die-input-label" id="modifer-modifed-die-label">
-                    modifer for modifed die
+                    Modifer
                     <input class="die-input" type="number" id="modifer-modifed-die" value="0">
                 </label>
                 <button class="submit-button" type="button" value="submit" id="modifed-die-submit-button">Roll!</button>
@@ -53,11 +53,11 @@
             </form>
             <form class="die-form" id="advantage-die-form">
                 <label class="die-input-label" id="number-of-advantage-die-sides-label">
-                    number of advantage die sides
+                    Die Sides
                     <input class="die-input" type="number" id="number-of-advantage-die-sides" value="20">
-                </label>
+                </label><br>
                 <label class="die-input-label" id="modifer-advantage-die-label">
-                    modifer of advantage die
+                    Modifer
                     <input class="die-input" type="number" id="modifer-advantage-die" value="0">
                 </label>
                 <button class="submit-button" type="button" value="submit" id="advantage-die-submit-button">Roll!</button>
@@ -65,11 +65,11 @@
             </form>
             <form class="die-form" id="disadvantage-die-form">
                 <label class="die-input-label" id="number-of-disadvantage-die-sides-label">
-                    number of disadvantage die sides
+                    Die Sides
                     <input class="die-input" type="number" id="number-of-disadvantage-die-sides" value="20">
-                </label>
+                </label><br>
                 <label class="die-input-label" id="modifer-disadvantage-die-label">
-                    modifer for disadvantage die
+                    Modifer
                     <input class="die-input" type="number" id="disadvantage-die-modifer" value="0">
                 </label>
                 <button class="submit-button" type="button" value="submit" id="disadvantage-die-submit-button">Roll!</button>
@@ -77,15 +77,15 @@
             </form>
             <form class="die-form" id="high-roll-form">
                 <label class="die-input-label" id="high-roll-die-sides-label">
-                    Number of Die Sides
-                    <input class="die-input" id="high-roll-die-sides" value="100">
-                </label>
+                    Die Sides
+                    <input class="die-input" type="number" id="high-roll-die-sides" value="100">
+                </label><br>
                 <label class="die-input-label" id="high-roll-pass-number-label">
-                    high roll pass number
+                    Pass
                     <input class="die-input" type="number" id="high-roll-pass-number" value="0">
-                </label>
+                </label><br>
                 <label class="die-input-label" id="high-roll-modifer-label">
-                    high roll modifer
+                    Modifer
                     <input class="die-input" type="number" id="high-roll-modifer" value="0">
                 </label>
                 <button class="submit-button" type="button" value="submit" id="high-roll-submit-button">Roll!</button>
@@ -93,29 +93,39 @@
             </form>
             <form class="die-form" id="low-roll-form">
                 <label class="die-input-label" id="low-roll-die-sides-label">
-                    <input class="die-input" id="low-roll-die-sides" value="100">
-                </label>
+                    Die Sides
+                    <input class="die-input" type="number" id="low-roll-die-sides" value="100">
+                </label><br>
                 <label class="die-input-label" id="low-roll-pass-number-label">
-                    low roll pass number
+                    Pass
                     <input class="die-input" type="number" id="low-roll-pass-number" value="0">
-                </label>
+                </label><br>
                 <label class="die-input-label" id="low-roll-modifer-label">
-                    low roll modifer
+                    Modifer
                     <input class="die-input" type="number" id="low-roll-modifer" value="0">
                 </label>
                 <button class="submit-button" type="button" value="submit" id="low-roll-submit-button">Roll!</button>
                 <p id="low-roll-results">Results</p>
             </form>
+            
     </section>
+    <div id=results-history-container>
+        <p id="results-history">Results History</p>
+    </div>
     <br>
     <section class="section-container" id="character-stats">
-        <form class=character-stats-form id="character-stats-single-dice-roll-form">
-            <button class="submit-button" type="button" id="stat-reroll-ones-button" value="submit">Reroll One</button>
-            <p id="stats-reroll-ones-results">Results</p>
-        </form>
-        <form class="character-stats-from" id="character-stats-reroll-ones-form">
+        <select id="choose-a-character-stat-option">
+            <option value="">Choose a character stat option</option>
+            <option value="character-stats-reroll-ones-form">Reroll Ones</option>
+            <option value="character-stats-drop-lowest-form">Drop Lowest</option>
+        </select>
+        <form class="character-stats-form" id="character-stats-reroll-ones-form">
             <button class="submit-button" type="button" id="character-stats-reroll-ones-button" value="submit">Roll Character Stats</button>
             <p id="character-stats-reroll-ones-results">Results</p>
+        </form><br>
+        <form class="character-stats-form" id="character-stats-drop-lowest-form">
+            <button class="submit-button" type="button" id="character-stats-drop-lowest-button">Roll Character Stats</button>
+            <p id="character-stats-drop-lowest-results">Results</p>
         </form>
     </section>
     <script src="script.js"></script>
