changed results history to text area

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             
     </section>
     <div id=results-history-container>
-        <p id="results-history">Results History</p>
+        <textarea id="results-history" cols="20" rows="10" readonly="readonly">Results History</textarea>
     </div>
     <br>
     <section class="section-container" id="character-stats">
